Use single quotes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,21 +86,21 @@ jobs:
           git config --local user.name "Syntax Checker"
       
       - name: Check syntax failure
-        if: steps.set_outputs.outputs.syntax != "success"
+        if: steps.set_outputs.outputs.syntax != 'success'
         run: |
           git revert HEAD~0
           git add -f *
           git commit -m "Revert last commit" -m "This commit had a syntax error in redirections.js"
       
       - name: Check link validity
-        if: steps.set_outputs.outputs.validity != "success"
+        if: steps.set_outputs.outputs.validity != 'success'
         run: |
           git revert HEAD~0
           git add -f *
           git commit -m "Revert last commit" -m "This commit had an module name, module owner or icon"
       
       - name: Push
-        if: steps.set_outputs.outputs.syntax != "success" || steps.set_outputs.outputs.validity != "success"
+        if: steps.set_outputs.outputs.syntax != 'success' || steps.set_outputs.outputs.validity != 'success'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
